--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://ton.vote",
+    "url": "https://realis-test-task.vercel.app/",
     "name": "RealisTestTask",
     "iconUrl": "https://ton.vote/logo.png"
 }
