--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@telegram-apps/sdk": "^2.5.2",
+    "@telegram-apps/sdk-react": "^2.0.9",
     "@tonconnect/ui-react": "^2.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
