--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://realis-test-task.vercel.app/",
     "name": "RealisTestTask",
-    "iconUrl": "https://ton.vote/logo.png"
+    "iconUrl": "https://cdn-icons-png.flaticon.com/512/12114/12114247.png"
 }
